# data-science.job-search

./: .gitignore  README.md  pyproject.toml  scrapper.ipynb  search_job.ipynb
